Würfel war nicht sichtbar.

--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
       /* ✅ Würfelgröße exakt aus Raster */
       --cube-size: calc(3 * var(--cell) + 2 * var(--cell-gap));
 
-      /* ✅ Pivot (Kugel) = Raster-Schnittpunkt nach 3 Zellen + 2 Gaps in der 6×6 Fläche
-         => NICHT geometrische Mitte, sondern "echter Drehpunkt" wie beim Holzspiel
-      */
+      /* ✅ Pivot (Kugel) = Raster-Schnittpunkt innerhalb 6×6 */
       --pivot-x: calc(var(--step) + var(--cube-size));
       --pivot-y: calc(var(--step) + var(--cube-size));
 
@@ -214,22 +212,21 @@
         radial-gradient(circle at 55% 60%, rgba(0,0,0,0.18), rgba(0,0,0,0.00) 55%),
         radial-gradient(circle at 50% 55%, #d6b996, #b88d63 70%);
       box-shadow: 0 3px 6px rgba(0,0,0,0.28);
-      z-index: 6;
+      z-index: 20;
       pointer-events: none;
     }
 
-    /* ✅ Pivot-Gruppe: an der Kugel verankert */
+    /* ✅ Würfelpaket: ABSICHERUNG – immer über allem */
     .cubePivot{
       position:absolute;
       left: var(--pivot-x);
       top:  var(--pivot-y);
-      width: 0;
-      height: 0;
-      z-index: 7;
+      width: 1px;   /* 🔒 verhindert "0-size edge case" */
+      height: 1px;
+      z-index: 30;  /* 🔒 garantiert über grid/floor/shadow */
       pointer-events: none;
     }
 
-    /* ✅ Position (welche Ecke hängt am Pivot) */
     .cubePos{
       position:absolute;
       left: 0;
@@ -238,7 +235,6 @@
       transform-origin: 0 0;
     }
 
-    /* ✅ Rotation (Plättchen bleiben fix am Würfel) */
     .cubeRot{
       position:relative;
       width: var(--cube-size);
@@ -341,15 +337,14 @@
 
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-      <!-- ✅ Kugel = Drehpunkt -->
+      <!-- ✅ Kugel -->
       <div class="ball" aria-label="Kugel"></div>
 
-      <!-- ✅ Würfelpaket um Pivot -->
+      <!-- ✅ Würfelpaket (WICHTIG: darf NICHT fehlen!) -->
       <div class="cubePivot" aria-hidden="true">
         <div class="cubePos">
           <div class="cubeRot">
             <div class="cube" aria-label="Würfel"></div>
-
             <div class="slot slot-2c" aria-label="Slot 2C"></div>
             <div class="slot slot-2d" aria-label="Slot 2D"></div>
             <div class="slot slot-3b" aria-label="Slot 3B"></div>
@@ -415,15 +410,6 @@
       grid.dataset.built = "1";
     }
 
-    /*
-      ✅ Vier Zustände = "Uhrzeiger" um den Pivot:
-      q0: oben links    -> Pivot ist unten rechts am Würfel  => tx=-S, ty=-S, rot=0
-      q1: oben rechts   -> Pivot ist unten links  am Würfel  => tx=0,  ty=-S, rot=90
-      q2: unten rechts  -> Pivot ist oben links   am Würfel  => tx=0,  ty=0,  rot=180
-      q3: unten links   -> Pivot ist oben rechts  am Würfel  => tx=-S, ty=0,  rot=270
-
-      S = --cube-size (wird in CSS berechnet)
-    */
     const Q = [
       { cls: "q0", tx: "calc(-1 * var(--cube-size))", ty: "calc(-1 * var(--cube-size))", rot: "0deg"   },
       { cls: "q1", tx: "0px",                         ty: "calc(-1 * var(--cube-size))", rot: "90deg"  },
@@ -453,7 +439,7 @@
       setTimeout(setBoardSquare, 80);
 
       buildGridOnce();
-      applyQuadrant(0); // Start: oben links
+      applyQuadrant(0);
     });
 
     window.addEventListener("resize", () => {
